# Logicwise

./: .gitignore  CMakeLists.txt  KNOWN_COMPILER_ISSUES.md  KNOWN_COMPILER_ISSUES.zh-Hans.md  README.md  README.zh-Hans.md
.github/workflows/: _compiler_template.yml  ci-linux-clang.yml  ci-linux-gcc.yml  ci-macos-clang.yml  ci-windows-msvc.yml
test/arrangement/: bipartite.cpp  bipartite_padding.cpp  elementwise.cpp  pairwise.cpp
test/behavior/quantifier/: de_morgan_law.cpp  short_circuit_evaluation.cpp
test/degeneracy/: cv_ref_ptr_matrix.cpp  non_traversable_extent.cpp
test/mode/validation/: bipartite_instance.cpp  bipartite_meta_and_instance.cpp  elementwise.cpp  pairwise.cpp  quantifier.cpp
test/mode/verification/: bipartite_instance.cpp  bipartite_meta.cpp  bipartite_meta_and_instance.cpp  elementwise.cpp  pairwise.cpp  quantifier.cpp
